[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.10"
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
serde = { version = "1.0.132", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
openssl = { version = "0.10.38", features = ["vendored"] }
sqlx = { version = "0.5.10", default_features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "bigdecimal"
]}
num-traits = "0.2.15"
log = "0.4.17"
env_logger = "0.9.1"
dotenv = "0.15.0"
